@@ -14,6 +14,9 @@ debsig-verify (0.9) UNRELEASED; urgency=low
   * Honour user CPPFLAGS, CFLAGS and LDFLAGS.
   * Set build flags via dpkg-buildflags.
   * Switch debian/copyright to machine-readable format 1.0.
+  * Add support for control.tar, control.tar.xz, data.tar, data.tar.xz,
+    data.tar.bz2 and data.tar.lzma deb members. Closes: #745563
+    Based on a patch by Vivek Das Mohapatra <vivek@etla.org>.
 
  -- Guillem Jover <guillem@debian.org>  Sun, 11 May 2014 05:35:13 +0200
 
